<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
              android:layout_height="39dp"
              android:text="@string/hello_new_user"
              android:textSize="24sp"
              android:textAlignment="center"
              android:gravity="center"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
              android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
              app:layout_constraintVertical_bias="0.397" android:id="@+id/textView2"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="39dp"
              android:text="@string/fill_name"
              android:textSize="24sp"
              android:textAlignment="center"
              android:gravity="center" android:layout_marginBottom="180dp"
              app:layout_constraintBottom_toBottomOf="parent"
              android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.0">
    </TextView>

    <EditText android:id="@+id/sign_in_edit_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="italic"
              android:inputType="text"
              android:imeOptions="actionDone|flagNoExtractUi"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.086" android:hint="@string/my_name_is"/>

    <Button
            android:id="@+id/button_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/this_is_my_name"
            android:textColor="@color/colorBlack"
            android:background="@drawable/button_border"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.518"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sign_in_edit_text"
            app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sign_in_edit_text"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>